b=377336, win32 printing page results in excessive data spooled to printer, for real this time, r=stuart