gfx/thebes/src/gfxWindowsSurface.cpp
@@ -45,20 +45,28 @@
 #include "nsString.h"
 
 gfxWindowsSurface::gfxWindowsSurface(HWND wnd) :
-    mOwnsDC(PR_TRUE), mWnd(wnd)
+    mOwnsDC(PR_TRUE), mForPrinting(PR_FALSE), mWnd(wnd)
 {
     mDC = ::GetDC(mWnd);
     Init(cairo_win32_surface_create(mDC));
 }
 
-gfxWindowsSurface::gfxWindowsSurface(HDC dc, PRBool deleteDC) :
-    mOwnsDC(deleteDC), mDC(dc),mWnd(nsnull)
+gfxWindowsSurface::gfxWindowsSurface(HDC dc, PRUint32 flags) :
+    mOwnsDC(PR_FALSE), mForPrinting(PR_FALSE), mDC(dc), mWnd(nsnull)
 {
-    Init(cairo_win32_surface_create(mDC));
+    if (flags & FLAG_TAKE_DC)
+        mOwnsDC = PR_TRUE;
+
+    if (flags & FLAG_FOR_PRINTING) {
+        Init(cairo_win32_printing_surface_create(mDC, TRUE));
+        mForPrinting = PR_TRUE;
+    } else {
+        Init(cairo_win32_surface_create(mDC));
+    }
 }
 
 gfxWindowsSurface::gfxWindowsSurface(const gfxIntSize& size, gfxImageFormat imageFormat) :
-    mOwnsDC(PR_FALSE), mWnd(nsnull)
+    mOwnsDC(PR_FALSE), mForPrinting(PR_FALSE), mWnd(nsnull)
 {
     if (!CheckSurfaceSize(size))
         return;
@@ -71,7 +79,7 @@ gfxWindowsSurface::gfxWindowsSurface(const gfxIntSize& size, gfxImageFormat imag
 }
 
 gfxWindowsSurface::gfxWindowsSurface(HDC dc, const gfxIntSize& size, gfxImageFormat imageFormat) :
-    mOwnsDC(PR_FALSE), mWnd(nsnull)
+    mOwnsDC(PR_FALSE), mForPrinting(PR_FALSE), mWnd(nsnull)
 {
     if (!CheckSurfaceSize(size))
         return;
@@ -85,9 +93,12 @@ gfxWindowsSurface::gfxWindowsSurface(HDC dc, const gfxIntSize& size, gfxImageFor
 
 
 gfxWindowsSurface::gfxWindowsSurface(cairo_surface_t *csurf) :
-    mOwnsDC(PR_FALSE), mWnd(nsnull)
+    mOwnsDC(PR_FALSE), mForPrinting(PR_FALSE), mWnd(nsnull)
 {
     mDC = cairo_win32_surface_get_dc(csurf);
+
+    if (cairo_surface_get_type(csurf) == CAIRO_SURFACE_TYPE_WIN32_PRINTING)
+        mForPrinting = PR_TRUE;
 
     Init(csurf, PR_TRUE);
 }
@@ -105,6 +116,9 @@ gfxWindowsSurface::~gfxWindowsSurface()
 already_AddRefed<gfxImageSurface>
 gfxWindowsSurface::GetImageSurface()
 {
+    if (mForPrinting)
+        return nsnull;
+
     cairo_surface_t *isurf = cairo_win32_surface_get_image(CairoSurface());
     if (!isurf)
         return nsnull;
@@ -118,6 +132,9 @@ gfxWindowsSurface::GetImageSurface()
 already_AddRefed<gfxWindowsSurface>
 gfxWindowsSurface::OptimizeToDDB(HDC dc, const gfxIntSize& size, gfxImageFormat format)
 {
+    if (mForPrinting)
+        return nsnull;
+
     gfxImageFormat realFormat = format;
 
     if (realFormat != ImageFormatRGB24)
@@ -204,6 +221,8 @@ nsresult gfxWindowsSurface::BeginPage()
 
 nsresult gfxWindowsSurface::EndPage()
 {
+    if (mForPrinting)
+        cairo_surface_show_page(CairoSurface());
     ::EndPage(mDC);
     return NS_OK;
 }
